--- a/extensions-builtin/sd_forge_ipadapter/thanks
+++ b/extensions-builtin/sd_forge_ipadapter/thanks
@@ -1,1 +1,1 @@
-This repo is modified from https://github.com/cubiq/ComfyUI_IPAdapter_plus
+This repo is modified from https://github.com/cubiq/C o m f y U I_IPAdapter_plus
